--- a/Assets/styles/css/style.css
+++ b/Assets/styles/css/style.css
@@ -1,1 +1,20 @@
-@import './styleComponents/index.css';
+@import './styleComponents/header.css';
+@import './styleComponents/navbar.css';
+@import './styleComponents/footer.css';
+@import './styleComponents/newsCard.css';
+@import './styleComponents/newsCategory.css';
+@import './stylePages/index.css';
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+body {
+    margin: auto;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
+}
