--- a/Assets/styles/css/style.css
+++ b/Assets/styles/css/style.css
@@ -5,6 +5,7 @@
 @import './styleComponents/newsCategory.css';
 @import './styleComponents/mostRead.css';
 @import './styleComponents/newsHeader.css';
+@import './styleComponents/modalComponentCadastrar.css';
 
 * {
     box-sizing: border-box;
@@ -17,5 +18,6 @@ body {
     margin: auto;
     padding: 0;
     background-color: #f4f4f4;
-    color: #333;
+    color: #333;                                                                                                                    11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111                  
 }
+
