--- a/Assets/styles/css/styleComponents/navbar.css
+++ b/Assets/styles/css/styleComponents/navbar.css
@@ -43,8 +43,87 @@ nav ul li a:hover {
 .hamburger {
     display: none;
     cursor: pointer;
+    background-color: #004aad;
+    color: white;
+    border: 3px solid white;
+}  
+.hamburger:hover {
+    background-color: #00337a;
 }
 
 .nav-links > li.hidden {
     display: none;
+}
+
+@media (max-width: 1441px) {
+}
+
+@media (max-width: 1281px) {    
+}
+
+@media (max-width: 1025px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 660px) {
+
+    .nav-links > li.hidden {
+        display: block;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .hamburger {
+        display: block;
+        width: 4rem;
+        height: 2rem;
+        border-radius: 10px;
+    }
+
+    .hamburger:hover {
+        background-color: #00337a;
+    }
+
+    .navbar > ul.nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #fff;
+        padding: 1rem;
+    }
+
+    .navbar > .nav-links.show {
+        margin-top: 1%;
+        display: flex;
+        border-radius: 10px;
+        border: 1px solid #205BA9;
+    }
+
+    .navbar > .nav-links.show > li {
+        height: 50px
+    }
+
+    .navbar > .nav-links.show > li:hover {
+        border: 1px solid #205BA9;
+        border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50px
+    }
+
+    .nav-links li {
+        margin: 0.5rem 0; 
+    }
+
+
+}
+
+@media (max-width: 480px) {
 }
