Add modal component for search functionality; update styles and HTML structure across multiple pages

--- a/Assets/styles/css/style.css
+++ b/Assets/styles/css/style.css
@@ -6,6 +6,7 @@
 @import './styleComponents/mostRead.css';
 @import './styleComponents/newsHeader.css';
 @import './styleComponents/modalComponentCadastrar.css';
+@import './styleComponents/modalComponentSearch.css';
 
 * {
     box-sizing: border-box;
