--- a/Assets/styles/css/style.css
+++ b/Assets/styles/css/style.css
@@ -7,6 +7,8 @@
 @import './styleComponents/newsHeader.css';
 @import './styleComponents/modalComponentCadastrar.css';
 @import './styleComponents/modalComponentSearch.css';
+@import '/Assets//styles/css/styleComponents/inputSearch.css';
+@import '/Assets/styles/css/styleComponents/resultSearch.css';
 
 * {
     box-sizing: border-box;
@@ -19,6 +21,6 @@ body {
     margin: auto;
     padding: 0;
     background-color: #f4f4f4;
-    color: #333;                                                                                                                    11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111                  
+    color: #333;                                                                    
 }
 
