--- a/Assets/styles/css/styleComponents/resultSearch.css
+++ b/Assets/styles/css/styleComponents/resultSearch.css
@@ -1,10 +1,9 @@
 .result-search-container {
-    display: flex;
+    display: none;
     flex-direction: column;
     list-style: none;
     margin-top: 12px;
     padding: 8px;
-
     max-height: 421px;
     overflow: auto;
 }
@@ -78,6 +77,7 @@
 
 .item-description {
     font-size: 14px;
+    width: 10;
     color: #666;
     display: flex;
     align-items: start;
