--- a/Assets/styles/css/styleComponents/resultSearch.css
+++ b/Assets/styles/css/styleComponents/resultSearch.css
@@ -36,15 +36,15 @@
 .item-image {
     width: 100%;
     height: auto;
-    max-width: 180px;
-    max-height: 150px;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .item-image img {
     width: 100%;
     height: auto;
-    max-width: 180px;
-    max-height: 150px;
+    max-width: 500px;
+    max-height: 500px;
     border-radius: 8px;
 }
 
@@ -61,10 +61,15 @@
 .divContentSubtitle {
     display: flex;
     color: #666;
+    margin: 5px 0;
 }
 
-.item-subtitle-text {
-    margin-right: 5%;
+.divContentSubtitle p {
+    margin: 0;
+}
+
+.divContentSubtitle > .item-subtitle-text {
+    margin-right: 5px;
 }
 
 .item-subtitle {
@@ -81,6 +86,20 @@
     color: #666;
     display: flex;
     align-items: start;
+}
+
+.item-content {
+    width: 600px;
+}
+
+.item-content > p.item-description {
+    width: 100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Número de linhas visíveis */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: justify;
 }
 
 
